# fan_control_nvidia-ml-py

./: .gitignore  LICENSE  README.md  pyproject.toml
profiles/: default.yml
scripts/: nvidia-gpu-fan-control.service
src/: constants.py  device.py  main.py
src/utils/: cmd_parser.py  logging.py  miscs.py  speed_profile.py
